syntax = "proto3";

package littlehorse;

import "google/protobuf/timestamp.proto";
import "common_wfspec.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.sdk.common.proto";

message TaskDef {
  string name = 1;
  repeated VariableDef input_vars = 2;
  google.protobuf.Timestamp created_at = 3;
}
